--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "bootstrap-icons": "^1.8.1",
+    "classnames": "^2.3.1",
     "fa-icons": "^0.2.0",
     "framer-motion": "^6.3.0",
     "next": "12.1.5",
