--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^1.8.8",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@react-google-maps/api": "^2.10.2",
     "bootstrap-icons": "^1.8.1",
     "classnames": "^2.3.1",
     "fa-icons": "^0.2.0",
