--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.10.2",
+    "@types/react-transition-group": "^4.4.5",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "react-transition-group": "^4.4.2"
   },
   "devDependencies": {
     "@types/node": "17.0.33",
