--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-google-maps/api": "^2.10.2",
     "@types/react-transition-group": "^4.4.5",
     "next": "12.1.6",
+    "next-themes": "^0.2.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.3.1",
