--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.10.2",
+    "@reduxjs/toolkit": "^1.8.5",
     "@types/react-transition-group": "^4.4.5",
     "next": "12.1.6",
     "next-themes": "^0.2.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.3.1",
+    "react-redux": "^8.0.2",
     "react-transition-group": "^4.4.2",
     "react-vertical-timeline-component": "^3.5.2"
   },
