something is working wip

--- a/config.json
+++ b/config.json
@@ -1,5 +1,4 @@
 {
   "localUrl": "https://localhost:44385",
-  "productionUrl": "",
-  "netsEasyCheckoutKey": "test-checkout-key-4207776c4e464cbc856b02e980e26c38"
+  "productionUrl": ""
 }
